--- a/index.html
+++ b/index.html
@@ -11,4 +11,15 @@
         <link rel="stylesheet" type="text/css" href="quiz_game.css">
         <script scr="quiz_game_login.js"></script>
     </head>
+    <body>
+        <h4 id="player1_name"></h4> <span id="player1_score"></span>
+        <br>
+        <h4 id="player2_name"></h4> <span id="player2_score"></span>
+        
+        <div class="container">
+            <center>
+                <h2 style="color: white;">The Math Quiz</h2>
+            </center>
+        </div>
+    </body>
 </html>
